추천 응답 두 섹션(popular/discovery) 개편 — 섹션당 50개, 중복 허용
- 응답: { sections: { popular: [...], discovery: [...] } } — 기존 recommendations 필드 삭제
- 섹션별 alpha(0.15/0.35)·count(50)는 scoring.json sections로 (topN 제거)
- 중복 제거 안 함(확정): 겹침은 alpha 튜닝의 문제 (실측 50개 기준 42개 겹침)
- Item에 genreL2 추가
- user_recommendations PK (user_id, universe_id, section) — 스키마·엔티티·ALTER 주석
- 정밀모드 done 응답·GET /api/recommendations 복원도 동일 형태
- 라이브 검증: 50+50 반환, genreL2 81/100, 저장 복원 정상

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>